--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@400;500;700&display=swap");
 
-.box {
-  background-color: orange;
-  display: flex;
-  font-weight: bold;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-h1 {
+body {
+  overflow-x: hidden;
+}
+h3 {
   font-family: "Playfair Display", serif;
+  font-size: 96px;
+  font-style: Bold;
+  text-align: left;
+  font-weight: 700;
+  line-height: normal;
+
+  text-decoration: none;
 }
 p {
   font-family: "Poppins", sans-serif;
+  font-size: 36px;
+  font-style: Bold;
+  text-align: center;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+}
+.btn-purple {
+
+  font-family: "Poppins", sans-serif;
+  background-color: #6c63ff;
+  font-size: 18px;
+}
+.hero-section{
+    background-color: rgba(249, 247, 254, 1);
 }
