--- a/style.css
+++ b/style.css
@@ -5,34 +5,70 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --primary-color: #6c63ff;
+}
 body {
   overflow-x: hidden;
 }
 h3 {
-  font-family: "Playfair Display", serif;
   font-size: 96px;
+}
+h2 {
+  font-size: 60px;
+  margin-bottom: 28px;
+}
+h3,
+h2 {
+  font-weight: 700;
+  font-family: "Playfair Display", serif;
   font-style: Bold;
   text-align: left;
-  font-weight: 700;
   line-height: normal;
-
   text-decoration: none;
+}
+.card-text {
+  font-size: 30px;
+  font-weight: 700;
+}
+.hero-subtitle {
+  font-size: 26px;
+  font-weight: 500;
 }
 p {
   font-family: "Poppins", sans-serif;
-  font-size: 36px;
   font-style: Bold;
   text-align: center;
-  font-weight: 700;
-  line-height: normal;
-  text-decoration: none;
+  line-height: 30px;
+}
+.work-para {
+  color: #6c757d;
+  margin-bottom: 48px;
 }
 .btn-purple {
-
   font-family: "Poppins", sans-serif;
-  background-color: #6c63ff;
+  background-color: var(--primary-color);
   font-size: 18px;
+  margin-top: 1rem;
+  padding: 0.6rem 2rem;
+  color: white;
 }
-.hero-section{
-    background-color: rgba(249, 247, 254, 1);
+.hero-section {
+  background-color: rgba(249, 247, 254, 1);
+}
+.hero-caption {
+  margin: 6rem auto;
+}
+.yoga-link {
+  /* background-color: var(--primary-color); */
+  padding: 0.7rem 2rem;
+  border: 1px solid var(--primary-color);
+  text-decoration: none;
+  color: var(--primary-color);
+  border-radius: 0.2rem;
+  font-family: Poppins, sans-serif;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  margin-top: 1rem;
 }
