--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 :root {
   --primary-color: #6c63ff;
+  --sec-color: #6c757d;
+  --gray-color: rgba(249, 247, 254, 1);
 }
 body {
   overflow-x: hidden;
@@ -38,11 +40,11 @@ h2 {
 p {
   font-family: "Poppins", sans-serif;
   font-style: Bold;
-  text-align: center;
+  /* text-align: center; */
   line-height: 30px;
 }
 .work-para {
-  color: #6c757d;
+  color: var(--sec-color);
   margin-bottom: 48px;
 }
 .btn-purple {
@@ -54,21 +56,53 @@ p {
   color: white;
 }
 .hero-section {
-  background-color: rgba(249, 247, 254, 1);
+  background-color: var(--gray-color);
 }
 .hero-caption {
   margin: 6rem auto;
 }
-.yoga-link {
-  /* background-color: var(--primary-color); */
+.yoga-link,
+.footer-link {
   padding: 0.7rem 2rem;
-  border: 1px solid var(--primary-color);
+
   text-decoration: none;
-  color: var(--primary-color);
+
   border-radius: 0.2rem;
   font-family: Poppins, sans-serif;
   font-size: 18px;
   line-height: 27px;
   text-align: center;
+}
+.yoga-link {
+  /* background-color: var(--primary-color); */
+  border: 1px solid var(--primary-color);
+
+  color: var(--primary-color);
+
   margin-top: 1rem;
+}
+.footer-link {
+  background-color: var(--primary-color);
+
+  color: white;
+}
+.enquiry-box {
+  background-color: var(--gray-color);
+  border: none;
+  margin-top: 3rem !important;
+}
+.circle{
+  background-color: var(--gray-color);
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.social-icon{
+  font-size: 2rem;
+  color: var(--primary-color);
+
 }
